# project-3

./: .cspell.json  .pre-commit-config.yaml  README.md  config_test.sh  debug_project3.py  project3.py  pyproject.toml  pytest.ini
docs/: CODE.md  QUERIES_INTERP.md  Relational_algebra.ipynb  Relational_algebra_operations_example.ipynb
src/project3/: fsm.py  interpreter.py  lexer.py  parser.py  project3.py  relation.py  reporter.py  token.py
tests/: test_passoff.py  test_relation.py  test_reporter.py
